# Algorithm

./: CMakeLists.txt
01_Divide_and_Conquer/: practice1-1.cpp  practice1-2.cpp  practice1-3.cpp  practice1-4.cpp
02_Greedy/: practice2-1.cpp  practice2-2.cpp  practice2-3.cpp  practice2-4.cpp
03_Dynamic_Programming/: practice3-1.cpp  practice3-2-1.c  practice3-2-2.cpp  practice3-2.cpp  practice3-3.cpp
04_Dynamic_Programming2/: practice4-1.cpp  practice4-2.cpp  practice4-3.cpp
05_Graph/: practice5-1-2.cpp  practice5-1-3.cpp  practice5-1.cpp
06_Additinal/: practice6-1.cpp  practice6-2.cpp  practice6-3.cpp  test.cpp
