cmake_minimum_required(VERSION 3.17)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)



add_executable(practice2-3 02_Greedy/practice2-3.cpp)
add_executable(practice1-2 01_Divide_and_Conquer/practice1-2.cpp)
add_executable(practice2-4 02_Greedy/practice2-4.cpp)
add_executable(practice3-1 03_Dynamic_Programming/practice3-1.cpp)
add_executable(practice3-2 03_Dynamic_Programming/practice3-2.cpp)
add_executable(practice3-3 03_Dynamic_Programming/practice3-2-1.c)
add_executable(practice3-2-2 03_Dynamic_Programming/practice3-2-2.cpp)