cmake_minimum_required(VERSION 3.17)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)


add_executable(practice4-3 04_Dynamic_Programming2/practice4-3.cpp)
add_executable(practice4-1 04_Dynamic_Programming2/practice4-1.cpp)
add_executable(practice5-1 05_Graph/practice5-1.cpp)
add_executable(practice5-1-2 05_Graph/practice5-1-2.cpp)
add_executable(practice5-1-3 05_Graph/practice5-1-3.cpp)
add_executable(practice6-1 06_Additinal/practice6-1.cpp)
add_executable(practice6-2 06_Additinal/practice6-2.cpp)
add_executable(practice6-3 06_Additinal/practice6-3.cpp)